--- a/docs/features/workflow-orchestration.qmd
+++ b/docs/features/workflow-orchestration.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Workflow orchestration"
+sidebar: features
 ---
 
 Chain tasks with `>>` or dependency injection and run them with `Workflow`.
