--- a/docs/getting-started/index.qmd
+++ b/docs/getting-started/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Getting Started"
+sidebar: getting-started
 ---
 
-# Getting Started
 
 This section shows you how to install **fuseline** and create your first agent. Use the navigation links on the left to browse individual topics.
