--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Welcome to Fuseline"
+sidebar: getting-started
 ---
-
-# Fuseline Documentation
 
 Fuseline is a batteries-included framework for building AI agents. Use the sections on the left to start exploring the library.
